# claude-to-chatgpt

./: Dockerfile  README.md  install-app.md  pyproject.toml
claude_to_chatgpt/: adapter.py  app.py  claude.py  logger.py  models.py  poe.py
claude_to_chatgpt/poe_graphql/: queries.json
tests/: claude_slack.py
