[tool.poetry]
name = "claude-to-chatgpt"
version = "0.2.0"
description = ""
authors = ["jtsang4 <wtzeng1@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9.16"
tiktoken = "^0.4.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
httpx = "^0.24.0"
socksio = "^1.0.0"
quickjs = "^1.9.2"
websocket-client = "^1.5.3"
requests = "^2.31.0"
python-socks = "^2.3.0"
tls_client = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
